divvy-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: thedivvyapp-nodeport-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
