divvy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: thedivvyapp-ip-address
    networking.gke.io/managed-certificates: thedivvyapp-certificate
spec:
  backend:
    serviceName: thedivvyapp-nodeport-service
    servicePort: 80
