k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thedivvyapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: thedivvyapp-ip-address
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  labels:
    app: divvy
spec:
  backend:
    serviceName: thedivvyapp-nodeport-service
    servicePort: 80
  tls:
  - hosts:
    - www.thedivvy.app
    secretName: thedivvy-app-tls-prod
